feat: 添加网页 Icon 和标题

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="小银子聚集地" />
   <title>银临茶舍</title>
+  <link rel="icon" href="public/favicon-small.webp" type="image/webp" />
   <script type="module" src="/src/App.tsx" fetchpriority="high" defer></script>
   <link rel="stylesheet" href="./index.css" />
 </head>
